--- a/src/app/admin/admin-participant-edit-form/admin-participant-edit-form.component.html
+++ b/src/app/admin/admin-participant-edit-form/admin-participant-edit-form.component.html
@@ -11,21 +11,21 @@
 
         <li>
             <label for=" firstname ">Nom de Participant</label>
-            <input type="text" name="firstname" id="firstname" [(ngModel)]="participant.firstname"
+            <input type="text" name="firstName" id="firstName" [(ngModel)]="participant.firstName"
                    required>
         </li>
 
 
         <li>
-            <label for=" lastname ">Prenom de Participant</label>
-            <input type="text" name="lastname" id="lastname"
-                   [(ngModel)]="participant.lastname" required>
+            <label for=" lastName ">Prenom de Participant</label>
+            <input type="text" name="lastName" id="lastName"
+                   [(ngModel)]="participant.lastName" required>
         </li>
 
         <li>
-            <label for=" adresse ">Adresse de Participant</label>
-            <input type="text" name="adresse" id="adresse"
-                   [(ngModel)]="participant.adresse" required>
+            <label for=" addresse ">Adresse de Participant</label>
+            <input type="text" name="addresse" id="addresse"
+                   [(ngModel)]="participant.addresse" required>
         </li>
 
         <li>
