modification de l'exigence des données lors du remplissage des formulaires

--- a/src/app/admin/admin-formateur-edit-form/admin-formateur-edit-form.component.html
+++ b/src/app/admin/admin-formateur-edit-form/admin-formateur-edit-form.component.html
@@ -7,20 +7,20 @@
     <ul>
         <li>
             <label for="firstName">Nom de formateur</label>
-            <input type="text" name="firstName" id="firstName" [(ngModel)]="formateur.firstName" required>
+            <input type="text" name="lastName" id="lastName" [(ngModel)]="formateur.lastName" required>
         </li>
 
 
         <li>
-            <label for="lastName">Prenom de formateur</label>
-            <input type="text" name="lastName" id="lastName" [(ngModel)]="formateur.lastName"
+            <label for="lastName">Prénom de formateur</label>
+            <input type="text" name="firstName" id="firstName" [(ngModel)]="formateur.firstName"
                    required>
         </li>
 
         <li>
             <label for=" adresse ">Adresse de formateur</label>
             <input type="text" name="adresse" id="adresse" [(ngModel)]="formateur.addresse"
-                   required>
+                   >
         </li>
 
         <li>
