--- a/src/app/admin/admin-participant-add-form/admin-participant-add-form.component.html
+++ b/src/app/admin/admin-participant-add-form/admin-participant-add-form.component.html
@@ -9,18 +9,18 @@
 
         <li>
             <label for=" firstName ">Nom de Participant</label>
-            <input type="text" name="firstName" id="firstName" ngModel required>
+            <input type="text" name="lastName" id="lastName" ngModel required>
         </li>
 
 
         <li>
-            <label for=" lastName ">Prenom de Participant</label>
-            <input type="text" name="lastName" id="lastName" ngModel required>
+            <label for=" lastName ">Prénom de Participant</label>
+            <input type="text" name="firstName" id="firstName" ngModel required>
         </li>
 
         <li>
             <label for="addresse ">Adresse de Participant</label>
-            <input type="text" name="addresse" id="addresse" ngModel required>
+            <input type="text" name="addresse" id="addresse" ngModel >
         </li>
 
         <li>
@@ -30,13 +30,13 @@
 
         <li>
             <label for=" company ">Societe de Participant</label>
-            <input type="text" name="company" id="company" ngModel required>
+            <input type="text" name="company" id="company" ngModel >
         </li>
 
 
         <li>
             <label for="position">Poste de Participant</label>
-            <input type="text" name="position" id="position" ngModel required>
+            <input type="text" name="position" id="position" ngModel >
         </li>
 
 
