--- a/src/app/admin/admin-formateur-add-form/admin-formateur-add-form.component.html
+++ b/src/app/admin/admin-formateur-add-form/admin-formateur-add-form.component.html
@@ -8,18 +8,18 @@
     <ul>
         <li>
             <label for=" firstName ">Nom de formateur</label>
-            <input type="text" name="firstName" id="firstName" ngModel required>
+            <input type="text" name="lastName" id="lastName" ngModel required>
         </li>
 
 
         <li>
-            <label for=" lastName ">Prenom de formateur</label>
-            <input type="text" name="lastName" id="lastName" ngModel required>
+            <label for=" lastName ">Prénom de formateur</label>
+            <input type="text" name="firstName" id="firstName" ngModel required>
         </li>
 
         <li>
             <label for=" addresse ">Adresse de formateur</label>
-            <input type="text" name="addresse" id="addresse" ngModel required>
+            <input type="text" name="addresse" id="addresse" ngModel >
         </li>
 
         <li>
