réglage des formulaires

--- a/src/app/admin/admin-formateur-edit-form/admin-formateur-edit-form.component.html
+++ b/src/app/admin/admin-formateur-edit-form/admin-formateur-edit-form.component.html
@@ -6,13 +6,13 @@
 
     <ul>
         <li>
-            <label for="firstName">Nom de formateur</label>
+            <label for="lastName">Nom de formateur</label>
             <input type="text" name="lastName" id="lastName" [(ngModel)]="formateur.lastName" required>
         </li>
 
 
         <li>
-            <label for="lastName">Prénom de formateur</label>
+            <label for="firstName">Prénom de formateur</label>
             <input type="text" name="firstName" id="firstName" [(ngModel)]="formateur.firstName"
                    required>
         </li>
