--- a/src/app/admin/admin-participant-add-form/admin-participant-add-form.component.html
+++ b/src/app/admin/admin-participant-add-form/admin-participant-add-form.component.html
@@ -8,13 +8,13 @@
 
 
         <li>
-            <label for=" firstName ">Nom de Participant</label>
+            <label for=" lastName ">Nom de Participant</label>
             <input type="text" name="lastName" id="lastName" ngModel required>
         </li>
 
 
         <li>
-            <label for=" lastName ">Prénom de Participant</label>
+            <label for=" firstName ">Prénom de Participant</label>
             <input type="text" name="firstName" id="firstName" ngModel required>
         </li>
 
