--- a/src/app/admin/admin-participant-edit-form/admin-participant-edit-form.component.html
+++ b/src/app/admin/admin-participant-edit-form/admin-participant-edit-form.component.html
@@ -10,16 +10,16 @@
 
 
         <li>
-            <label for=" firstname ">Nom de Participant</label>
+            <label for=" lastName ">Nom de Participant</label>
             <input type="text" name="lastName" id="lastName" [(ngModel)]="participant.lastName"
                    required>
         </li>
 
 
         <li>
-            <label for=" lastName ">Prénom de Participant</label>
-            <input type="text" name="firsName" id="firsName"
-                   [(ngModel)]="participant.firsName" required>
+            <label for=" firstName ">Prénom de Participant</label>
+            <input type="text" name="firstName" id="firstName"
+                   [(ngModel)]="participant.firstName" required>
         </li>
 
         <li>
